Fixed password field not showing characters

--- a/frontend/website/style.css
+++ b/frontend/website/style.css
@@ -233,6 +233,10 @@ canvas {
     src: url('fonts/SpaceMission.otf') format('opentype');
 }
 
+input[type='password'] {
+    font-family: 'monospace';
+}
+
 input[type='range'] {
     overflow: hidden;
     width: 80%;
